--- a/elementStyle.css
+++ b/elementStyle.css
@@ -3,9 +3,54 @@ body {
   left: 0;
   margin: 0;
   overflow: hidden;
+  position: relative;
+}
+
+#mainPauseMenu{
+  height: 480;
+  width: 640;
+  background-color: white;
+  z-index: -1;
+  opacity: .5;
+  position: absolute;
+  padding: 0;
+  margin: auto;
+  display: block;
+  top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 canvas {
+  z-index: 1;
+  position: absolute;
+  padding: 0;
+  margin: auto;
+  display: block;
+  top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
- image {
- }
+
+#border{
+  width: 100%;
+  height: 100%;
+  background: url("background.jpg") no-repeat fixed center;
+  z-index: -100;
+}
+
+#back{
+  width: 680px;
+  height: 520px;
+  background: url("stoneBackground.jpeg");
+  position: absolute;
+  padding: 0;
+  margin: auto;
+  display: block;
+  top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
